--- a/main.html
+++ b/main.html
@@ -3,10 +3,27 @@
 <html>
 
 <head>
+	<title>Testimonial Section</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<section class="testimonial-section">
+    <div class="testimonial">
+      <p class="text">"This product completely changed the way I work. Absolutely incredible experience!"</p>
+      <p class="author">— John Doe</p>
+    </div>
+
+    <div class="testimonial">
+      <p class="text">"Super easy to use and the customer support was top-notch. Highly recommend!"</p>
+      <p class="author">— Jane Smith</p>
+    </div>
+
+    <div class="testimonial">
+      <p class="text">"An essential tool for any professional. I can't imagine going back."</p>
+      <p class="author">— Alex Lee</p>
+    </div>
+  </section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
