--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<h1>Testimonials</h1>
 	<section class="testimonial-section">
     <div class="testimonial">
       <p class="text">"This product completely changed the way I work. Absolutely incredible experience!"</p>
