--- a/main.html
+++ b/main.html
@@ -8,23 +8,19 @@
 </head>
 
 <body>
-	<section class="testimonial-section">
-	<h1>Testimonials</h1>
+	<div class="testimonial-section">
+    <h1>Testimonials</h1>
+
     <div class="testimonial">
-      <p class="text">"This product completely changed the way I work. Absolutely incredible experience!"</p>
-      <p class="author">— John Doe</p>
+      <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+      <p class="author">- <em>John Doe</em></p>
     </div>
 
     <div class="testimonial">
-      <p class="text">"Super easy to use and the customer support was top-notch. Highly recommend!"</p>
-      <p class="author">— Jane Smith</p>
+      <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+      <p class="author">- <em>Jane Smith</em></p>
     </div>
-
-    <div class="testimonial">
-      <p class="text">"An essential tool for any professional. I can't imagine going back."</p>
-      <p class="author">— Alex Lee</p>
-    </div>
-  </section>
+  </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
